# ESP32S3

./: .clang-format  .gitignore  CMakeLists.txt  README.en.md  README.md  sdkconfig  sdkconfig.old
components/: CMakeLists.txt
components/ADC/: ADCM.c
components/BSP/: CMakeLists.txt
components/BSP/24CXX/: 24CXX.c  24CXX.h
components/BSP/ADC/: ADCM.h
components/BSP/AP3216C/: AP3216C.c  AP3216C.h
components/BSP/IIC/: IIC.c
components/BSP/LED/: LED.c  LED.h
components/BSP/MQTT_Test/: mqtt_test.c
components/BSP/RGBLCD/: RGBLCD.h
components/BSP/SERNSOR/: sensor.h
components/BSP/SW_PWM/: SWPWM.h
components/BSP/TCP_Mclient/: tcp_mclient.c  tcp_mclient.h
components/BSP/TCP_Mserver/: tcp_mserver.c  tcp_mserver.h
components/BSP/TOUCH/: gt1151.h  touch.c
components/BSP/UART/: UART.c
components/BSP/UDP/: UDP_EXAMPLE.c  UDP_EXAMPLE.h
components/BSP/WEATHER/: http_weather.c
components/BSP/WIFI_USER/: wifi_ap.h  wifi_smartconfig.h  wifi_sta.h
components/EMISSION/: emission.c  emission.h
components/ESPTIMER/: ESPTIMER.c  ESPTIMER.h
components/GPTIMER/: GPTIMER.c  GPTIMER.h
components/IIC/: IIC.c  IIC.h
components/KEY/: KEY.c  KEY.h
components/LED/: LED.c  LED.h
components/MQTT_Test/: mqtt_test.h
components/QMA6100A/: qma6100a.c  qma6100a.h
components/REMOTE/: remote.c  remote.h
components/RENC/: renc.c  renc.h
components/RGBLCD/: RGBLCD.c  RGBLCD.h  ltdcfont.h
components/RTC/: SB_RTC.c  SB_RTC.h
components/SERNSOR/: sensor.c
components/SW_PWM/: SWPWM.c
components/TOUCH/: gt1151.c  touch.h
components/UART/: UART.h
components/UDP/: UDP_CONFIG.c  UDP_CONFIG.h  UDP_EXAMPLE.c  UDP_EXAMPLE.h
components/WEATHER/: http_weather.c  http_weather.h
components/WIFI_SCAN/: wifi_scan.c  wifi_scan.h
components/WIFI_USER/: wifi_ap.c  wifi_scan.c  wifi_scan.h  wifi_smartconfig.c  wifi_sta.c  wifi_sta.h
components/XL9555/: XL9555.c  XL9555.h
main/: CMakeLists.txt  wrz.c
main/APP/: True_color.c  True_color_chroma_keyed.c  True_color_with_alpha.c  lvgl_demo.c  lvgl_demo.h  lvgl_mytest.c  lvgl_mytest.h
